added docker, security custom and controller